--- a/ClientMarch/ClientMarch.csproj
+++ b/ClientMarch/ClientMarch.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GMap.NET.Core, Version=1.7.5.0, Culture=neutral, PublicKeyToken=b85b9027b614afef, processorArchitecture=MSIL">
+      <HintPath>..\packages\GMap.NET.WindowsForms.1.7.5\lib\net40\GMap.NET.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="GMap.NET.WindowsForms, Version=1.7.5.0, Culture=neutral, PublicKeyToken=b85b9027b614afef, processorArchitecture=MSIL">
+      <HintPath>..\packages\GMap.NET.WindowsForms.1.7.5\lib\net40\GMap.NET.WindowsForms.dll</HintPath>
+    </Reference>
     <Reference Include="MetroFramework, Version=1.2.0.3, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroFramework.RunTime.1.2.0.3\lib\net40-Client\MetroFramework.dll</HintPath>
     </Reference>
@@ -62,6 +68,12 @@
     <Compile Include="Add__car.Designer.cs">
       <DependentUpon>Add__car.cs</DependentUpon>
     </Compile>
+    <Compile Include="AutoService__main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AutoService__main.Designer.cs">
+      <DependentUpon>AutoService__main.cs</DependentUpon>
+    </Compile>
     <Compile Include="connect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -77,6 +89,12 @@
     <Compile Include="Regestration.Designer.cs">
       <DependentUpon>Regestration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Service__info__add.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Service__info__add.Designer.cs">
+      <DependentUpon>Service__info__add.cs</DependentUpon>
+    </Compile>
     <Compile Include="user.cs" />
     <Compile Include="User__main.cs">
       <SubType>Form</SubType>
@@ -86,6 +104,9 @@
     </Compile>
     <EmbeddedResource Include="Add__car.resx">
       <DependentUpon>Add__car.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AutoService__main.resx">
+      <DependentUpon>AutoService__main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -101,6 +122,9 @@
     </Compile>
     <EmbeddedResource Include="Regestration.resx">
       <DependentUpon>Regestration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Service__info__add.resx">
+      <DependentUpon>Service__info__add.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="User__main.resx">
       <DependentUpon>User__main.cs</DependentUpon>
