--- a/ClientMarch/packages.config
+++ b/ClientMarch/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
